--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     
     <p>  
-    	<img src="files/Gabi.jpg" style="float: right; margin-left: 60px; height: 260px;">
+    	<img src="Gabi.JPG" style="float: right; margin-left: 60px; height: 260px;">
 </p>
 
 <p> 
