--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
 
   <nav>
   
-  <div style="float: left; font-size: x-large;"><b><a href="https://gabrielistrate.github.io/index.html" style="text-decoration: none; color: var(--text)">Gabriel Istrate</a></b></div>
+  <div style="float: left; font-size: x-large;"><b><a href="https://gabriel-istrate.github.io/index.html" style="text-decoration: none; color: var(--text)">Gabriel Istrate</a></b></div>
   
-  <a href="https://gabrielistrate.github.io/index.html" class="navb">Home</a>
+  <a href="https://gabriel-istrate.github.io/index.html" class="navb">Home</a>
   
-  <a href="https://gabrielistrate.github.io/about.html" class="navb">About me</a>
+  <a href="https://gabriel-istrate.github.io/about.html" class="navb">About me</a>
 
-   <a href="https://gabrielistrate.github.io/publications.html" class="navb">Publications</a>
+   <a href="https://gabriel-istrate.github.io/publications.html" class="navb">Publications</a>
   
-  <a href="https://gabrielistrate.github.io/media.html" class="navb">Media Appearances</a>
+  <a href="https://gabriel-istrate.github.io/media.html" class="navb">Media Appearances</a>
   
  
   
@@ -59,7 +59,7 @@
 	<a href="https://www.unibuc.ro/">University of Bucharest</a> as a Full Professor.<P>  -->
 
     My research interests are varied and eclectic, and span Theoretical Computer Science, Artificial Intelligence and Complex Systems. 
-	You can read more about them  <a href="https://gabrielistrate.github.io/about.html">here</a>.
+	You can read more about them  <a href="https://gabriel-istrate.github.io/about.html">here</a>.
 </p>    
 
     
@@ -80,7 +80,7 @@
 <dl>
 	
 		<strong>Email:</strong>
-		<span class="nobr">gabrielistrate<img style="vertical-align:middle; height: 15px;" src="files/at.png">acm.org</span>
+		<span class="nobr">gabriel-istrate<img style="vertical-align:middle; height: 15px;" src="files/at.png">acm.org</span>
 
 	
 	<br>
@@ -112,14 +112,14 @@
     <ul>
 
     <li>
-    <a href="https://gabrielistrate.github.io/engleza.pdf">CV (pdf)</a>
+    <a href="https://gabriel-istrate.github.io/engleza.pdf">CV (pdf)</a>
     (updated Mar 2022)
     </li>
 
         
     <li>
     <strong>
-    <a href="https://gabrielistrate.github.io/publications.html">Publications</a>
+    <a href="https://gabriel-istrate.github.io/publications.html">Publications</a>
     </strong>
     </li>
 
@@ -146,7 +146,7 @@ Last updated June 10, 2022.
   downloadPdfs(t) { return this._call('downloadPdfs', [t]); },
   open() { return this._call('open', []); },
   _call(methodName, methodArgs) {
-    window.postMessage({ token: '0.9279408855633287', methodName, methodArgs }, 'https://gabrielistrate.github.io');
+    window.postMessage({ token: '0.9279408855633287', methodName, methodArgs }, 'https://gabriel-istrate.github.io');
     return new Promise(resolve => {
       const listener = window.addEventListener('message', event => {
         const data = event.data;
