--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
   
   <a href="https://gabriel-istrate.github.io/index.html" class="navb">Home</a>
   
-  <a href="https://gabriel-istrate.github.io/about.html" class="navb">About me</a>
+  <a href="https://gabriel-istrate.github.io/about.html" class="navb">About</a>
 
    <a href="https://gabriel-istrate.github.io/publications.html" class="navb">Publications</a>
   
-  <a href="https://gabriel-istrate.github.io/media.html" class="navb">Media Appearances</a>
+  <a href="https://gabriel-istrate.github.io/media.html" class="navb">Media</a>
   
  
   
