--- a/media.html
+++ b/media.html
@@ -35,7 +35,8 @@
     <p>
 
     </p>
-Some of the conference presentations/media appearances, recorded here for posterity :-)
+    Some of the conference presentations/media appearances, recorded here for posterity :-)
+    <h3> Scientific Presentations </h3> 
     <ul>
       	<li>
 	<a href="https://youtu.be/_DsDjMqtcpw">Being Central on the Cheap: Stability in Heterogeneous Multiagent Centrality Games</a>, presentation at AAMAS'22, May 2022. <a href="https://www.ifaamas.org/Proceedings/aamas2022/pdfs/p651.pdf">paper.</a> 
@@ -49,12 +50,18 @@ Some of the conference presentations/media appearances, recorded here for poster
 	<li>
 	<a href="https://www.youtube.com/watch?v=qQA_HwcOif4">It's Not Whom You Know, It's What You (or Your Friends !) Can Do: Coalitional Frameworks for Network Centrality</a>, long version of presentation at AAMAS'20, May 2020. paper. 
 	</li>
+	<li>
 	<a href="https://www.youtube.com/watch?v=l0-4lnyba3s">Adressing the Validation Problem for Social Simulations: the Adversarial Scheduling Approach</a>, presentation at CVSS 2008, August 2008, Zurich.
-</li>
-<a href="">Towards Synthetic Activity-based Models for Large-scale Socio-technical Simulations</a>, presentation at CHS'07, February 2007, Los Angeles. Audio only. 
+</li><li>
+<a href="https://gabriel-istrate.github.io/files/chs2007_6884.mp3">Towards Synthetic Activity-based Models for Large-scale Socio-technical Simulations</a>, (audio only), presentation at CHS'07, February 2007, Los Angeles.  
 	</li>
 
-	</ul>
+    </ul>
+    <h3> Media Appearances </h3>
+    <ul>
+      <li> <a href="https://gabriel-istrate.github.io/files/rrc2020.mp3">Idei în nocturnă</a>, Radio România Cultural (Romanian, audio only), March 2020. 
+	</li> 
+      </ul> 
     <p></p>
 
 
