--- a/media.html
+++ b/media.html
@@ -42,18 +42,21 @@
 	<a href="https://youtu.be/_DsDjMqtcpw">Being Central on the Cheap: Stability in Heterogeneous Multiagent Centrality Games</a>, presentation at AAMAS'22, May 2022. <a href="https://www.ifaamas.org/Proceedings/aamas2022/pdfs/p651.pdf">paper.</a> 
 	</li>
 		<li>
-	<a href="https://www.youtube.com/watch?v=Xp0YnVZ8COg">Kernelization, Proof Complexity and Social Choice</a>, presentation at ICALP'21, July 2021.
+	<a href="https://www.youtube.com/watch?v=Xp0YnVZ8COg">Kernelization, Proof Complexity and Social Choice</a>, presentation at ICALP'21, July 2021. <a href="">paper</a>
 	</li>
  	<li>
-	<a href="https://www.youtube.com/watch?v=eU8_eVCQz9A">Game theoretic Models of Moral and Other-Regarding Agents (on Kantian Equilibria)</a>, presentation at TARK'21, June 2021. paper. 
+	<a href="https://www.youtube.com/watch?v=eU8_eVCQz9A">Game theoretic Models of Moral and Other-Regarding Agents (on Kantian Equilibria)</a>, presentation at TARK'21, June 2021. <a href="">paper.</a> 
 	</li>
+		<li>
+	<a href="https://www.youtube.com/watch?v=jo6hv11Ayws">Taking agent-based model robustness seriously: Some ways forward</a>, presentation at IGSS'21, June 2021.
+</li>
 	<li>
 	<a href="https://www.youtube.com/watch?v=qQA_HwcOif4">It's Not Whom You Know, It's What You (or Your Friends !) Can Do: Coalitional Frameworks for Network Centrality</a>, long version of presentation at AAMAS'20, May 2020. paper. 
 	</li>
 	<li>
 	<a href="https://www.youtube.com/watch?v=l0-4lnyba3s">Adressing the Validation Problem for Social Simulations: the Adversarial Scheduling Approach</a>, presentation at CVSS 2008, August 2008, Zurich.
 </li><li>
-<a href="https://gabriel-istrate.github.io/files/chs2007_6884.mp3">Towards Synthetic Activity-based Models for Large-scale Socio-technical Simulations</a>, (audio only), presentation at CHS'07, February 2007, Los Angeles.  
+<a href="https://gabriel-istrate.github.io/files/chs2007.mp3">Towards Synthetic Activity-based Models for Large-scale Socio-technical Simulations</a>, (audio only), presentation at CHS'07, February 2007, Los Angeles.  
 	</li>
 
     </ul>
