--- a/index.html
+++ b/index.html
@@ -128,6 +128,10 @@
     <a href="https://scholar.google.com/citations?user=KmuHvIwAAAAJ">Google scholar</a>, <a href="https://dblp.org/pid/35/5367.html">DBLP</a></strong>
     </li>
 
+    <li>
+    <strong>
+    <a href="https://gabriel-istrate.github.io/tcs-calendar.html">Conference Calendar</a></strong>
+    </li>
 
     </ul>
 
