--- a/index.html
+++ b/index.html
@@ -132,7 +132,10 @@
     <strong>
     <a href="https://gabriel-istrate.github.io/tcs-calendar.html">Conference Calendar</a></strong>
     </li>
-
+<li>
+    <strong>
+    <a href="https://gabriel-istrate.github.io/journal-cfps.html">Journal Calls for Papers</a></strong>
+    </li>
     </ul>
 
 
