--- a/journal-cfps.html
+++ b/journal-cfps.html
@@ -27,7 +27,7 @@
 
   <div style="float: left; font-size: x-large;"><b><a href="https://gabriel-istrate.github.io/index.html" style="text-decoration: none; color: var(--text)">Back to main</a></b></div><P><P>
 
-  <h1> Conference Calendar </h1>
+  <h1> Journal CFPs </h1>
 
   Mostly for my personal use. <P>
 
@@ -35,78 +35,21 @@
   
    <table>
   <tr>
-    <th>Conference</th>
+    <th>Journal</th>
     <th>Deadline</th>
-    <th>Location and Date</th>
+    <th>Topic</th>
   </tr>
   <tr>
-    <td><a href="https://aamas2023.soton.ac.uk/">AAMAS</td>
-    <td>October 28 (Abstract: October 21)</td>
-    <td>London UK, May 29 - June 2</td>
+    <td><a href="https://dmuu2022.github.io/">Annals of Operations Research</td>
+    <td>April 15, 2023</td>
+    <td>Decision-Making Under Uncertainty: A Multidisciplinary Perspective</td>
   </tr>
   
  
-  <tr>
-  <td><a href="https://ijcai-23.org/">ICML</a></td>
-    <td>Jan (?) 2023</td>
-  <td>Seoul, Korea, July 24-30, 2023</td></tr>
-  <tr><td><a href="">IJCAI</a></td>
-    <td>Jan (?) 2023</td>
-    <td>Capetown, South Africa, August 2023</td></tr>
-
-  <tr>
-    <td><a href="https://icalp2023.cs.upb.de/cms/">ICALP</a></td>
-    <td>February 10</td>
-    <td>Paderborn, July 10-14, 2023</td>
-  </tr>
-  <tr>
-    <td><a href="">SAT</a></td>
-    <td>February (?)</td>
-    <td>Alghero, July (?) 2023</td>
-  </tr>
-  <tr>
-  <td><a href="">TARK</a></td>
-    <td>March (?)</td>
-    <td> (?) 2023</td>
-  </tr>
-  <tr>
-    <td><a href="https://kr.org/KR2023/">KR</a></td>
-    <td>March 14 (Abstract: March 7)</td>
-    <td>Rhodes, September 2-8, 2023</td>
-  </tr>
-   <tr>
-  <td><a href="">Logic Colloquium</a></td>
-    <td> (?) 2023</td>
-  <td>Milano, Italy, June 5-9, 2023</td></tr>
-   <tr>
-   <td><a href="">CIE 2023</a></td>
-    <td> (?) 2023</td>
-    <td>Batumi, Georgia, June (?), 2023</td></tr>
-  <tr>
-  <td><a href="https://ecai2023.eu/">ECAI</a></td>
-    <td>late April 2023</td>
-  <td>Krakow, Poland, Oct 1-6, 2023</td></tr>
-   <tr>
-  <td><a href="https://theory.utdallas.edu/COCOA2023/">COCOA</a></td>
-    <td>August 19 (Abstract: August 12)</td>
-    <td><b>Virtual</b>, December 11-13, 2023</td></tr>
-</table> 
-
-   <h2> 2024 </h2>
   
-   <table>
-  <tr>
-    <th>Conference</th>
-    <th>Deadline</th>
-    <th>Location and Date</th>
-  </tr>
-  <tr>
-    <td><a href="">ICML</td>
-    <td></td>
-    <td>Vienna, Austria</td>
-  </tr>
- 
 </table> 
+
+   
  
 
 
