--- a/journal-cfps.html
+++ b/journal-cfps.html
@@ -40,9 +40,9 @@
     <th>Topic</th>
   </tr>
   <tr>
-    <td><a href="https://dmuu2022.github.io/">Annals of Operations Research</td>
+    <td>Annals of Operations Research</td>
     <td>April 15, 2023</td>
-    <td>Decision-Making Under Uncertainty: A Multidisciplinary Perspective</td>
+    <td><a href="https://dmuu2022.github.io/">Decision-Making Under Uncertainty: A Multidisciplinary Perspective</a></td>
   </tr>
   
  
