--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <dl>
 
 		<strong>Email:</strong>
-		<span class="nobr">gabriel-istrate<img style="vertical-align:middle; height: 15px;" src="files/at.png">acm.org</span>
+		<span class="nobr">gabriel.istrate<img style="vertical-align:middle; height: 15px;" src="files/at.png">acm.org</span>
 
 
 	<br>
