--- a/journal-cfps.html
+++ b/journal-cfps.html
@@ -39,6 +39,12 @@
     <th>Deadline</th>
     <th>Topic</th>
   </tr>
+   <tr>
+    <td>Journal of Combinatorial Optimization</td>
+    <td>December 1, 2022</td>
+    <td><a href="https://www.euro-online.org/bb/forum/3#/topic/29410">New Challenges in Combinatorial Optimization</a></td>
+  </tr>
+  
   <tr>
     <td>Annals of Operations Research</td>
     <td>April 15, 2023</td>
