--- a/tcs-calendar.html
+++ b/tcs-calendar.html
@@ -67,7 +67,7 @@
   <tr>
   <td><a href="">TARK</a></td>
     <td>March (?)</td>
-    <td> (?) 2023</td>
+    <td>Oxford, UK, June 28-30, 2023</td>
   </tr>
   <tr>
     <td><a href="https://kr.org/KR2023/">KR</a></td>
