--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     <p>
 
 	</p><ul>
- 	<li>
-	Starting October 1, 2022 I will be leaving West University of Timișoara for a position at University of Bucharest.
+ 	<li><font color="#008000">
+	Starting October 1, 2022 I have left West University of Timișoara,  and am now a Full Professor at University of Bucharest.</font>
 	</li>
 	<li>
 	<a href="https://dl.acm.org/doi/10.5555/3535850.3535924">Being Central on the Cheap: Stability in Heterogeneous Multiagent Centrality Games</a> with Cosmin Bonchiș, was presented at AAMAS 2022, May 2022. <a href="https://www.ifaamas.org/Proceedings/aamas2022/pdfs/p651.pdf">Free version (ifaamas).</a> <a href="https://youtu.be/_DsDjMqtcpw">Video.</a>
