--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
     <h2>News</h2>
     <p>
 
-	</p><ul>
+    </p><ul>
+      <li> New paper, <a href="https://authors.elsevier.com/a/1f%7EtQ_6wzEdV78">"A Parametric Worst-Case Approach to Fairness in Cooperative Games with Transferable Utility"</a> has appeared online in Theoretical Computer Science. Access is free until December 17. 
+	</li>
  	<li><font color="#008000">
 	Starting October 1, 2022 I have left West University of Timișoara,  and am now a Full Professor at University of Bucharest.</font>
 	</li>
