--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <p>
 
     </p><ul>
-      <li> New paper, <a href="https://authors.elsevier.com/a/1f%7EtQ_6wzEdV78">"A Parametric Worst-Case Approach to Fairness in Cooperative Games with Transferable Utility"</a> has appeared online in Theoretical Computer Science. Access is free until December 17. 
+      <li> New paper, <a href="https://authors.elsevier.com/a/1f%7EtQ_6wzEdV78">"A Parametric Worst-Case Approach to Fairness in Cooperative Games with Transferable Utility"</a> has appeared online in <i> Theoretical Computer Science</i>. Access is free until December 17. 
 	</li>
  	<li><font color="#008000">
 	Starting October 1, 2022 I have left West University of Timișoara,  and am now a Full Professor at University of Bucharest.</font>
