--- a/tcs-calendar.html
+++ b/tcs-calendar.html
@@ -44,15 +44,14 @@
     <td>October 28 (Abstract: October 21)</td>
     <td>London UK, May 29 - June 2</td>
   </tr>
-  
- 
   <tr>
-  <td><a href="https://ijcai-23.org/">ICML</a></td>
-    <td>Jan (?) 2023</td>
-  <td>Seoul, Korea, July 24-30, 2023</td></tr>
-  <tr><td><a href="">IJCAI</a></td>
-    <td>Jan (?) 2023</td>
-    <td>Capetown, South Africa, August 2023</td></tr>
+  <td><a href="https://www.issac-conference.org/2023/">ISSAC</a></td>
+    <td>Jan 31, 2023 (Abstract: Jan 24) AOE</td>
+  <td>Tromso, Norway, July 24-27, 2023</td></tr>
+  
+  <tr><td><a href="https://ijcai-23.org/">IJCAI</a></td>
+    <td>Jan (?14?) 2023</td>
+    <td>Capetown, South Africa, August 19-25, 2023</td></tr>
 
   <tr>
     <td><a href="https://icalp2023.cs.upb.de/cms/">ICALP</a></td>
@@ -66,7 +65,7 @@
   </tr>
   <tr>
   <td><a href="">TARK</a></td>
-    <td>March (?)</td>
+    <td>March 22, 2023 (Abstract: March 15)</td>
     <td>Oxford, UK, June 28-30, 2023</td>
   </tr>
   <tr>
