--- a/tcs-calendar.html
+++ b/tcs-calendar.html
@@ -44,15 +44,17 @@
     <td>October 28 (Abstract: October 21)</td>
     <td>London UK, May 29 - June 2</td>
   </tr>
-  <tr>
-  <td><a href="https://www.issac-conference.org/2023/">ISSAC</a></td>
-    <td>Jan 31, 2023 (Abstract: Jan 24) AOE</td>
-  <td>Tromso, Norway, July 24-27, 2023</td></tr>
+  
+  
   
   <tr><td><a href="https://ijcai-23.org/">IJCAI</a></td>
     <td>Jan (?14?) 2023</td>
     <td>Capetown, South Africa, August 19-25, 2023</td></tr>
 
+  <tr>
+  <td><a href="https://www.issac-conference.org/2023/">ISSAC</a></td>
+    <td>Jan 31, 2023 (Abstract: Jan 24) AOE</td>
+  <td>Tromso, Norway, July 24-27, 2023</td></tr>
   <tr>
     <td><a href="https://icalp2023.cs.upb.de/cms/">ICALP</a></td>
     <td>February 10</td>
@@ -63,24 +65,26 @@
     <td>February (?)</td>
     <td>Alghero, July (?) 2023</td>
   </tr>
-  <tr>
-  <td><a href="https://sites.google.com/view/tark-2023">TARK</a></td>
-    <td>March 22, 2023 (Abstract: March 15)</td>
-    <td>Oxford, UK, June 28-30, 2023</td>
-  </tr>
+   <tr>
+   <td><a href="">CIE </a></td>
+    <td> February 15 2023 (Abstract: February 8)</td>
+    <td>Batumi, Georgia, July 24-28, 2023</td></tr>
+ 
   <tr>
     <td><a href="https://kr.org/KR2023/">KR</a></td>
     <td>March 14 (Abstract: March 7)</td>
     <td>Rhodes, September 2-8, 2023</td>
   </tr>
    <tr>
+  <td><a href="https://sites.google.com/view/tark-2023">TARK</a></td>
+    <td>March 22, 2023 (Abstract: March 15)</td>
+    <td>Oxford, UK, June 28-30, 2023</td>
+  </tr>
+   <tr>
   <td><a href="">Logic Colloquium</a></td>
     <td> (?) 2023</td>
   <td>Milano, Italy, June 5-9, 2023</td></tr>
-   <tr>
-   <td><a href="">CIE 2023</a></td>
-    <td> (?) 2023</td>
-    <td>Batumi, Georgia, June (?), 2023</td></tr>
+  
   <tr>
   <td><a href="https://ecai2023.eu/">ECAI</a></td>
     <td>late April 2023</td>
