--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
     <p>
 
     </p><ul>
+      <li> I will be giving an online talk in the <a href="https://theorypurdue.wordpress.com">theoretical computer science seminar</a> at Purdue University.
+       <li> I am giving a talk at <a href="https://www.kolkom.de">KOLKOM'22</a> in Paderborn, Germany.  
+	</li>
       <li> New paper, <a href="https://authors.elsevier.com/a/1f%7EtQ_6wzEdV78">"A Parametric Worst-Case Approach to Fairness in Cooperative Games with Transferable Utility"</a> has appeared online in <i> Theoretical Computer Science</i>. Access is free until December 17. 
 	</li>
  	<li><font color="#008000">
