--- a/media.html
+++ b/media.html
@@ -31,16 +31,21 @@
 
  
   
-    <h2>Media</h2>
+    <h1 style = "color:#800000">Media</h1>
     <p>
 
     </p>
     Some of the conference presentations/media appearances, recorded here for posterity :-)
-    <h3> Scientific Presentations </h3> 
-    <ul>
+    <h2 style = "color:#008080" > Scientific Presentations </text></h2>
+    <h4> 2022 </h4>
+    <ul>	<li>
+	<a href="https://youtu.be/E6Oumvh7HdY">Mechanism Design with Predictions for Obnoxious Facility Location</a>, presentation at Purdue Theory Seminar, November 30,2022. <a href="">manuscript.</a> 
+	</li>
       	<li>
 	<a href="https://youtu.be/_DsDjMqtcpw">Being Central on the Cheap: Stability in Heterogeneous Multiagent Centrality Games</a>, presentation at AAMAS'22, May 2022. <a href="https://www.ifaamas.org/Proceedings/aamas2022/pdfs/p651.pdf">paper.</a> 
-	</li>
+	</li></ul>
+    <h4> 2021 </h4>
+    <ul>
 		<li>
 	<a href="https://www.youtube.com/watch?v=Xp0YnVZ8COg">Kernelization, Proof Complexity and Social Choice</a>, presentation at ICALP'21, July 2021. <a href="">paper</a>
 	</li>
@@ -49,10 +54,13 @@
 	</li>
 		<li>
 	<a href="https://www.youtube.com/watch?v=jo6hv11Ayws">Taking agent-based model robustness seriously: Some ways forward</a>, presentation at IGSS'21, June 2021.
-</li>
-	<li>
+		</li></ul>
+		 <h4> 2020 </h4>
+	<ul> <li>
 	<a href="https://www.youtube.com/watch?v=qQA_HwcOif4">It's Not Whom You Know, It's What You (or Your Friends !) Can Do: Coalitional Frameworks for Network Centrality</a>, long version of presentation at AAMAS'20, May 2020. paper. 
-	</li>
+	</li></ul>
+	<h4> Before 2020 </h4>
+	<ul>
 	<li>
 	<a href="https://www.youtube.com/watch?v=l0-4lnyba3s">Adressing the Validation Problem for Social Simulations: the Adversarial Scheduling Approach</a>, presentation at CVSS 2008, August 2008, Zurich.
 </li><li>
@@ -60,7 +68,7 @@
 	</li>
 
     </ul>
-    <h3> Media Appearances </h3>
+    <h2 style = "color:#008080"> Media Appearances </h2>
     <ul>
       <li> <a href="https://gabriel-istrate.github.io/files/rrc2020.mp3">Idei în nocturnă</a>, Radio România Cultural (Romanian, audio only), March 2020. 
 	</li> 
