--- a/tcs-calendar.html
+++ b/tcs-calendar.html
@@ -48,7 +48,7 @@
   
   
   <tr><td><a href="https://ijcai-23.org/">IJCAI</a></td>
-    <td>Jan (?14?) 2023</td>
+    <td>Jan 18 2023 (Abstract: Jan 11)</td>
     <td>Capetown, South Africa, August 19-25, 2023</td></tr>
 
   <tr>
@@ -57,7 +57,7 @@
   <td>Tromso, Norway, July 24-27, 2023</td></tr>
   <tr>
     <td><a href="https://icalp2023.cs.upb.de/cms/">ICALP</a></td>
-    <td>February 10</td>
+    <td>February 11, 11AM CET</td>
     <td>Paderborn, July 10-14, 2023</td>
   </tr>
   <tr>
