--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
 	<a href="https://fmi.unibuc.ro">Faculty of Mathematics and Computer Science,</a>
 	<a href="https://www.unibuc.ro/">University of Bucharest</a> as a Full Professor.<P>  -->
 
+    <font color="#008000">
+      Starting October 1, 2022 I have left West University of Timișoara,  and am now a Full Professor at University of Bucharest.</font>
+    
     My research interests are varied and eclectic, and span Theoretical Computer Science, Artificial Intelligence and Complex Systems.
 	You can read more about them  <a href="https://gabriel-istrate.github.io/about.html">here</a>.
 </p>
@@ -73,9 +76,6 @@
        <li> I have given a talk at <a href="https://www.kolkom.de">KOLKOM'22</a> in Paderborn, Germany.  
 	</li>
       <li> New paper, <a href="https://authors.elsevier.com/a/1f%7EtQ_6wzEdV78">"A Parametric Worst-Case Approach to Fairness in Cooperative Games with Transferable Utility"</a> has appeared online in <i> Theoretical Computer Science</i>. Access is free until December 17. 
-	</li>
- 	<li><font color="#008000">
-	Starting October 1, 2022 I have left West University of Timișoara,  and am now a Full Professor at University of Bucharest.</font>
 	</li>
 	<li>
 	<a href="https://dl.acm.org/doi/10.5555/3535850.3535924">Being Central on the Cheap: Stability in Heterogeneous Multiagent Centrality Games</a> with Cosmin Bonchiș, was presented at AAMAS 2022, May 2022. <a href="https://www.ifaamas.org/Proceedings/aamas2022/pdfs/p651.pdf">Free version (ifaamas).</a> <a href="https://youtu.be/_DsDjMqtcpw">Video.</a>
