--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 	<a href="https://www.unibuc.ro/">University of Bucharest</a> as a Full Professor.<P>  -->
 
     <font color="#008000">
-      Starting October 1, 2022 I have left West University of Timișoara,  and am now a Full Professor at University of Bucharest.</font>
+      Starting October 1, 2022 I have left West University of Timișoara,  and am now a Full Professor at University of Bucharest.</font><P>
+    
     
     My research interests are varied and eclectic, and span Theoretical Computer Science, Artificial Intelligence and Complex Systems.
 	You can read more about them  <a href="https://gabriel-istrate.github.io/about.html">here</a>.
