--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	<a href="https://www.unibuc.ro/">University of Bucharest</a> as a Full Professor.<P>  -->
 
     <font color="#008000">
-      Starting October 1, 2022 I have left West University of Timișoara,  and am now a Full Professor at University of Bucharest.</font><P>
+      Effective October 1, 2022 I have left West University of Timișoara,  and am now a Full Professor at University of Bucharest.</font><P>
     
     
     My research interests are varied and eclectic, and span Theoretical Computer Science, Artificial Intelligence and Complex Systems.
@@ -108,7 +108,7 @@
 		<ul>
 		  <li> <a href="http://math.uvt.ro">Faculty of Mathematics and Computer Science</a>, <a href="http://www.uvt.ro">West University of Timișoara</a>  and the <a href="http://www.ieat.ro">e-Austria Research Institute.</a> </li>
 		  <li> <a href="http://csc.centre.ubbcluj.ro/">Center for the Study of Complexity</a>, <a href="http://www.ubbcluj.ro"> Babeș-Bolyai University</a>, Cluj. </li>
-		  <li> Several groups at <a href="http://www.lanl.gov"> Los Alamos National Laboratory</a>, including <a href="https://www.lanl.gov/org/ddste/aldsc/computer-computational-statistical-sciences/information-sciences/index.php">CCS-3</a> and the <a href="http://cnls.lanl.gov"> Center For Nonlinear Studies.</a> </li>
+		  <li> Several groups at <a href="http://www.lanl.gov"> Los Alamos National Laboratory</a>, including <a href="https://www.lanl.gov/org/ddste/aldsc/computer-computational-statistical-sciences/information-sciences/index.php">CCS-5 (now CCS-3)</a> and the <a href="http://cnls.lanl.gov"> Center For Nonlinear Studies.</a> </li>
 
 		  <li> <a href="http://www.cs.rochester.edu">Dept. of Computer Science</a>, <a href="http://www.rochester.edu">University of Rochester </a></li>
 		  </ul>
@@ -121,7 +121,7 @@
 
     <li>
     <a href="https://gabriel-istrate.github.io/engleza.pdf">CV (pdf)</a>
-    (updated Mar 2022)
+    (updated December 2022)
     </li>
 
 
