--- a/tcs-calendar.html
+++ b/tcs-calendar.html
@@ -56,6 +56,11 @@
     <td>Jan 31, 2023 (Abstract: Jan 24) AOE</td>
   <td>Tromso, Norway, July 24-27, 2023</td></tr>
   <tr>
+    <td><a href="http://www.i-cav.org/2023/call-for-papers">CAV</a></td>
+    <td>February 3, AoE</td>
+    <td>Paris, July 17-22, 2023</td>
+  </tr>
+  <tr>
     <td><a href="https://icalp2023.cs.upb.de/cms/">ICALP</a></td>
     <td>February 11, 11AM CET</td>
     <td>Paderborn, July 10-14, 2023</td>
