--- a/tcs-calendar.html
+++ b/tcs-calendar.html
@@ -70,11 +70,7 @@
     <td>February 10, AoE</td>
     <td>Warwick, UK, July 17-20, 2023</td>
   </tr>
-  <tr>
-    <td><a href="">SAT</a></td>
-    <td>February (?)</td>
-    <td>Alghero, July (?) 2023</td>
-  </tr>
+  
    <tr>
    <td><a href="">CIE </a></td>
     <td> February 15 2023 (Abstract: February 8)</td>
@@ -84,6 +80,11 @@
     <td><a href="https://kr.org/KR2023/">KR</a></td>
     <td>March 14 (Abstract: March 7)</td>
     <td>Rhodes, September 2-8, 2023</td>
+  </tr>
+  <tr>
+    <td><a href="">SAT</a></td>
+    <td>March 17 (Abstract: March 10)</td>
+    <td>Alghero, July 4-8, 2023</td>
   </tr>
    <tr>
   <td><a href="https://sites.google.com/view/tark-2023">TARK</a></td>
