--- a/tcs-calendar.html
+++ b/tcs-calendar.html
@@ -75,7 +75,11 @@
    <td><a href="">CIE </a></td>
     <td> February 15 2023 (Abstract: February 8)</td>
     <td>Batumi, Georgia, July 24-28, 2023</td></tr>
- 
+  <tr>
+  <td><a href="https://lc2023.unimi.it/">Logic Colloquium</a></td>
+    <td> March 1, 2023</td>
+  <td>Milano, Italy, June 5-9, 2023</td></tr>
+  
   <tr>
     <td><a href="https://kr.org/KR2023/">KR</a></td>
     <td>March 14 (Abstract: March 7)</td>
@@ -91,10 +95,6 @@
     <td>March 22, 2023 (Abstract: March 15)</td>
     <td>Oxford, UK, June 28-30, 2023</td>
   </tr>
-   <tr>
-  <td><a href="">Logic Colloquium</a></td>
-    <td> (?) 2023</td>
-  <td>Milano, Italy, June 5-9, 2023</td></tr>
   
   <tr>
   <td><a href="https://ecai2023.eu/">ECAI</a></td>
