--- a/tcs-calendar.html
+++ b/tcs-calendar.html
@@ -95,12 +95,21 @@
     <td>March 22, 2023 (Abstract: March 15)</td>
     <td>Oxford, UK, June 28-30, 2023</td>
   </tr>
-  
+   <tr>
+  <td><a href="https://highlights-conference.org/2023">HALG (Highlights, Algorithms)</a></td>
+    <td>March 29, 2023</td>
+  <td>Praha, Czech Republic, June 2-4, 2023</td></tr>
   <tr>
   <td><a href="https://ecai2023.eu/">ECAI</a></td>
     <td>late April 2023</td>
   <td>Krakow, Poland, Oct 1-6, 2023</td></tr>
-   <tr>
+  <tr>
+    <tr>
+  <td><a href="https://highlights-conference.org/2023">Highlights (Logic, Games, Automata)</a></td>
+    <td>April 25 2023 (early: February 17)</td>
+  <td>Kassel, Germany, July 24-28, 2023</td></tr>
+  <tr>
+    
   <td><a href="https://theory.utdallas.edu/COCOA2023/">COCOA</a></td>
     <td>August 19 (Abstract: August 12)</td>
     <td><b>Virtual</b>, December 11-13, 2023</td></tr>
