--- a/tcs-calendar.html
+++ b/tcs-calendar.html
@@ -50,6 +50,10 @@
   <tr><td><a href="https://ijcai-23.org/">IJCAI</a></td>
     <td>Jan 18 2023 (Abstract: Jan 11)</td>
     <td>Capetown, South Africa, August 19-25, 2023</td></tr>
+  
+ <tr><td><a href="https://ec23.sigecom.org/call-for-contributions-acm/papers/">EC</a></td>
+    <td>Jan 27 2023 (Abstract: Jan 20 AoE)</td>
+    <td>London, UK, July 9-12, 2023</td></tr>
 
   <tr>
   <td><a href="https://www.issac-conference.org/2023/">ISSAC</a></td>
