--- a/tcs-calendar.html
+++ b/tcs-calendar.html
@@ -105,8 +105,8 @@
   <td>Praha, Czech Republic, June 2-4, 2023</td></tr>
   <tr>
   <td><a href="https://ecai2023.eu/">ECAI</a></td>
-    <td>late April 2023</td>
-  <td>Krakow, Poland, Oct 1-6, 2023</td></tr>
+    <td>May 8, 2023 (Abstract: May 2)</td>
+  <td>Krakow, Poland, Sept 30 - Oct 5, 2023</td></tr>
   <tr>
     <tr>
   <td><a href="https://highlights-conference.org/2023">Highlights (Logic, Games, Automata)</a></td>
