--- a/tcs-calendar.html
+++ b/tcs-calendar.html
@@ -103,16 +103,20 @@
   <td><a href="https://highlights-conference.org/2023">HALG (Highlights, Algorithms)</a></td>
     <td>March 29, 2023</td>
   <td>Praha, Czech Republic, June 2-4, 2023</td></tr>
-  <tr>
-  <td><a href="https://ecai2023.eu/">ECAI</a></td>
-    <td>May 8, 2023 (Abstract: May 2)</td>
-  <td>Krakow, Poland, Sept 30 - Oct 5, 2023</td></tr>
-  <tr>
+ 
+     <tr>
+  <td><a href="http://automata2023.units.it">AUTOMATA'2023</a></td>
+    <td>April 21 2023</td>
+  <td>Trieste, Italy, August 30-September 1, 2023</td></tr>
     <tr>
   <td><a href="https://highlights-conference.org/2023">Highlights (Logic, Games, Automata)</a></td>
     <td>April 25 2023 (early: February 17)</td>
   <td>Kassel, Germany, July 24-28, 2023</td></tr>
   <tr>
+     <tr>
+  <td><a href="https://ecai2023.eu/">ECAI</a></td>
+    <td>May 8, 2023 (Abstract: May 2)</td>
+  <td>Krakow, Poland, Sept 30 - Oct 5, 2023</td></tr>
     
   <td><a href="https://theory.utdallas.edu/COCOA2023/">COCOA</a></td>
     <td>August 19 (Abstract: August 12)</td>
