--- a/journal-cfps.html
+++ b/journal-cfps.html
@@ -50,7 +50,11 @@
     <td>April 15, 2023</td>
     <td><a href="https://dmuu2022.github.io/">Decision-Making Under Uncertainty: A Multidisciplinary Perspective</a></td>
   </tr>
-  
+  <tr>
+    <td>Studia Logica</td>
+    <td>September 1, 2023</td>
+    <td><a href="https://www.illc.uva.nl/NewsandEvents/Events/Conferences/newsitem/14068/CfP-Studia-Logica-special-issue-on-Information-Sharing-in-Networks-">Information-Sharing in Networks</a></td>
+  </tr>
  
   
 </table> 
