--- a/tcs-calendar.html
+++ b/tcs-calendar.html
@@ -105,19 +105,28 @@
   <td>Praha, Czech Republic, June 2-4, 2023</td></tr>
  
      <tr>
-  <td><a href="http://automata2023.units.it">AUTOMATA'2023</a></td>
+  <td><a href="http://automata2023.units.it">AUTOMATA</a></td>
     <td>April 21 2023</td>
   <td>Trieste, Italy, August 30-September 1, 2023</td></tr>
     <tr>
   <td><a href="https://highlights-conference.org/2023">Highlights (Logic, Games, Automata)</a></td>
     <td>April 25 2023 (early: February 17)</td>
   <td>Kassel, Germany, July 24-28, 2023</td></tr>
+      <tr>
+  <td><a href="https://algo-conference.org/2023/esa/">ESA</a></td>
+    <td>April 28 2023, AoE</td>
+  <td>Amsterdam, Netherlands, September 4-6, 2023</td></tr>
   <tr>
+     <td><a href="https://apice.unibo.it/xwiki/bin/view/Events/Eumas2023">EUMAS</a></td>
+    <td>May ? 2023</td>
+  <td>Napoli, Italy, September 14-16, 2023</td>
+  </tr>
+  
      <tr>
   <td><a href="https://ecai2023.eu/">ECAI</a></td>
     <td>May 8, 2023 (Abstract: May 2)</td>
   <td>Krakow, Poland, Sept 30 - Oct 5, 2023</td></tr>
-    
+   <tr> 
   <td><a href="https://theory.utdallas.edu/COCOA2023/">COCOA</a></td>
     <td>August 19 (Abstract: August 12)</td>
     <td><b>Virtual</b>, December 11-13, 2023</td></tr>
