--- a/media.html
+++ b/media.html
@@ -70,6 +70,8 @@
     </ul>
     <h2 style = "color:#008080"> Media Appearances </h2>
     <ul>
+      <li><a href="https://www.youtube.com/watch?v=6ty7_7RmVuM"> Deschis la Cercetare (Open for Research) Podcast with Cristian Presur&atilde; and Ada Roseti </a> (Romanian), May 2023. 
+	</li> 
       <li> <a href="https://gabriel-istrate.github.io/files/rrc2020.mp3">Idei în nocturnă</a>, Radio România Cultural (Romanian, audio only), March 2020. 
 	</li> 
       </ul> 
