--- a/index.html
+++ b/index.html
@@ -71,15 +71,10 @@
     <p>
 
     </p><ul>
-      <li> I will serve on the Program Committee of the <a href="https://aamas2023.soton.ac.uk/calls/blue-sky-ideas/">Blue Sky Track</a> at <a href="https://aamas2023.soton.ac.uk/">AAMAS 2023</a>. 
+      <li> I have given a talk at <a href="https://www.lix.polytechnique.fr/CCC2024/i.php?Main.Home">CCC'2024</a> conference in Nice, France. 
 	</li>
-      <li> I have given an online talk in the <a href="https://theorypurdue.wordpress.com">theoretical computer science seminar</a> at Purdue University.</li>
-       <li> I have given a talk at <a href="https://www.kolkom.de">KOLKOM'22</a> in Paderborn, Germany.  
-	</li>
-      <li> New paper, <a href="https://authors.elsevier.com/a/1f%7EtQ_6wzEdV78">"A Parametric Worst-Case Approach to Fairness in Cooperative Games with Transferable Utility"</a> has appeared online in <i> Theoretical Computer Science</i>. Access is free until December 17. 
-	</li>
-	<li>
-	<a href="https://dl.acm.org/doi/10.5555/3535850.3535924">Being Central on the Cheap: Stability in Heterogeneous Multiagent Centrality Games</a> with Cosmin Bonchiș, was presented at AAMAS 2022, May 2022. <a href="https://www.ifaamas.org/Proceedings/aamas2022/pdfs/p651.pdf">Free version (ifaamas).</a> <a href="https://youtu.be/_DsDjMqtcpw">Video.</a>
+      <li> I have published a paper (and given a talk) at the <a href="https://from2024.uvt.ro/">FROM'2024</a> workshop in Timișoara, Romania. The <a href="https://cgi.cse.unsw.edu.au/~eptcs/paper.cgi?FROM2024:69"> paper </a> is available online on EPTCS (even though the volume has not yet been formally published). 
+       <li> I have published a paper (and given a talk) at the <a href="https://www.stringology.org">Prague Stringology Conference</a> in Prague, Czech Republic. The <a href="https://stringology.org/papers/PSC2024.pdf"> conference proceedings </a> (including my paper) are available online (even though not yet visible through the webpage).
 	</li>
 	</ul>
     <p></p>
@@ -88,7 +83,7 @@
 <dl>
 
 		<strong>Email:</strong>
-		<span class="nobr">gabriel.istrate<img style="vertical-align:middle; height: 15px;" src="files/at.png">acm.org</span>
+		<span class="nobr">gabriel.istrate<img style="vertical-align:middle; height: 15px;" src="files/at.png">unibuc.ro</span>
 
 
 	<br>
