--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 		  <li> <a href="http://csc.centre.ubbcluj.ro/">Center for the Study of Complexity</a>, <a href="http://www.ubbcluj.ro"> Babeș-Bolyai University</a>, Cluj. </li>
 		  <li> Several groups at <a href="http://www.lanl.gov"> Los Alamos National Laboratory</a>, including <a href="https://www.lanl.gov/org/ddste/aldsc/computer-computational-statistical-sciences/information-sciences/index.php">CCS-5 (now CCS-3)</a> and the <a href="http://cnls.lanl.gov"> Center For Nonlinear Studies.</a> </li>
 
-		  <li> <a href="http://www.cs.rochester.edu">Dept. of Computer Science</a>, <a href="http://www.rochester.edu">University of Rochester </a></li>
+		  <li> (as a Ph.D. student) <a href="http://www.cs.rochester.edu">Dept. of Computer Science</a>, <a href="http://www.rochester.edu">University of Rochester </a></li>
 		  </ul>
 
 </dl>
