--- a/tcs-calendar.html
+++ b/tcs-calendar.html
@@ -31,7 +31,7 @@
 
   Mostly for my personal use. <P>
 
-      <h2> 2023 </h2>
+      <h2> 2025 </h2>
   
    <table>
   <tr>
@@ -47,9 +47,9 @@
   
   
   
-  <tr><td><a href="https://ijcai-23.org/">IJCAI</a></td>
+  <tr><td><a href="https://2025.ijcai.org/">IJCAI</a></td>
     <td>Jan 18 2023 (Abstract: Jan 11)</td>
-    <td>Capetown, South Africa, August 19-25, 2023</td></tr>
+    <td>Montreal, Canada, August 16-22, 2025</td></tr>
   
  <tr><td><a href="https://ec23.sigecom.org/call-for-contributions-acm/papers/">EC</a></td>
     <td>Jan 27 2023 (Abstract: Jan 20 AoE)</td>
