--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	<a href="https://www.unibuc.ro/">University of Bucharest</a> as a Full Professor.<P>  -->
 
     <font color="#008000">
-      Effective October 1, 2022 I have left West University of Timișoara,  and am now a Full Professor at University of Bucharest.</font><P>
+      Effective October 1, 2022 I have left West University of Timișoara,  and am now a Full Professor at the University of Bucharest.</font><P>
     
     
     My research interests are varied and eclectic, and span Theoretical Computer Science, Artificial Intelligence and Complex Systems.
@@ -71,10 +71,10 @@
     <p>
 
     </p><ul>
-      <li> I have given a talk at <a href="https://www.lix.polytechnique.fr/CCC2024/i.php?Main.Home">CCC'2024</a> conference in Nice, France. 
+      <li> I have given a talk at the <a href="https://www.lix.polytechnique.fr/CCC2024/i.php?Main.Home">Continuity, Computability Constructivity: From Logic to Algorithms (CCC'2024)</a> conference in Nice, France. 
 	</li>
-      <li> I have published a paper (and given a talk) at the <a href="https://from2024.uvt.ro/">FROM'2024</a> workshop in Timișoara, Romania. The <a href="https://cgi.cse.unsw.edu.au/~eptcs/paper.cgi?FROM2024:69"> paper </a> is available online on EPTCS (even though the volume has not yet been formally published). 
-       <li> I have published a paper (and given a talk) at the <a href="https://www.stringology.org">Prague Stringology Conference</a> in Prague, Czech Republic. The <a href="https://stringology.org/papers/PSC2024.pdf"> conference proceedings </a> (including my paper) are available online (even though not yet visible through the webpage).
+      <li> I have published a paper (and given a talk) at the <a href="https://from2024.uvt.ro/">Working Formal Methods Symposium (FROM'2024)</a>  in Timișoara, Romania. The <a href="https://cgi.cse.unsw.edu.au/~eptcs/paper.cgi?FROM2024:69"> paper </a> is available online on EPTCS (even though the volume has not yet been formally published). 
+       <li> I have published a paper (and given a talk) at the <a href="https://www.stringology.org/event/2024">Prague Stringology Conference 2024</a> in Prague, Czech Republic. The <a href="https://stringology.org/papers/PSC2024.pdf"> conference proceedings </a> (including my paper) are available online (even though not yet visible through the PSC webpage).
 	</li>
 	</ul>
     <p></p>
