--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </p><ul>
       <li> I have given a talk at the <a href="https://www.lix.polytechnique.fr/CCC2024/i.php?Main.Home">Continuity, Computability Constructivity: From Logic to Algorithms (CCC'2024)</a> conference in Nice, France. 
 	</li>
-      <li> I have published a paper (and given a talk) at the <a href="https://from2024.uvt.ro/">Working Formal Methods Symposium (FROM'2024)</a>  in Timișoara, Romania. The <a href="https://cgi.cse.unsw.edu.au/~eptcs/paper.cgi?FROM2024:69"> paper </a> is available online on EPTCS (even though the volume has not yet been formally published). 
+      <li> I have published a paper (and given a talk) at the <a href="https://from2024.uvt.ro/">Working Formal Methods Symposium (FROM'2024)</a>  in Timișoara, Romania. The <a href="https://cgi.cse.unsw.edu.au/~eptcs/paper.cgi?FROM2024:69"> paper </a> is available online on EPTCS. 
        <li> I have published a paper (and given a talk) at the <a href="https://www.stringology.org/event/2024">Prague Stringology Conference 2024</a> in Prague, Czech Republic. The <a href="https://stringology.org/papers/PSC2024.pdf"> conference proceedings </a> (including my paper) are available online (even though not yet visible through the PSC webpage).
 	</li>
 	</ul>
