--- a/tcs-calendar.html
+++ b/tcs-calendar.html
@@ -31,119 +31,58 @@
 
   Mostly for my personal use. <P>
 
-      <h2> 2025 </h2>
+      <h2> 2026 </h2>
   
    <table>
   <tr>
     <th>Conference</th>
     <th>Deadline</th>
     <th>Location and Date</th>
+  </tr>
+  <tr>
+    <td><a href="https://aamas2023.soton.ac.uk/">AAAI</td>
+    <td> (Abstract: August)</td>
+    <td>Singapore, January 20-27 </td>
   </tr>
   <tr>
     <td><a href="https://aamas2023.soton.ac.uk/">AAMAS</td>
     <td>October 28 (Abstract: October 21)</td>
-    <td>London UK, May 29 - June 2</td>
+    <td>Cyprus, May </td>
   </tr>
   
   
   
-  <tr><td><a href="https://2025.ijcai.org/">IJCAI</a></td>
-    <td>Jan 18 2023 (Abstract: Jan 11)</td>
-    <td>Montreal, Canada, August 16-22, 2025</td></tr>
+  <tr><td><a href="https://2026.ijcai.org/">IJCAI-ECAI</a></td>
+    <td>Jan  (Abstract: Jan )</td>
+    <td>Bremen, Germany, August, 2026</td></tr>
   
- <tr><td><a href="https://ec23.sigecom.org/call-for-contributions-acm/papers/">EC</a></td>
-    <td>Jan 27 2023 (Abstract: Jan 20 AoE)</td>
-    <td>London, UK, July 9-12, 2023</td></tr>
+ <tr><td><a href="https://ec23.sigecom.org/call-for-contributions-acm/papers/">LICS</a></td>
+    <td>Jan (Abstract: Jan )</td>
+    <td>Lisbon, Portugal, July</td></tr>
 
   <tr>
-  <td><a href="https://www.issac-conference.org/2023/">ISSAC</a></td>
-    <td>Jan 31, 2023 (Abstract: Jan 24) AOE</td>
-  <td>Tromso, Norway, July 24-27, 2023</td></tr>
+  <td><a href="https://www.issac-conference.org/2023/">SAT</a></td>
+    <td>Jan (Abstract: Jan ) AOE</td>
+  <td>Lisbon, Portugal, July, 2026</td></tr>
   <tr>
     <td><a href="http://www.i-cav.org/2023/call-for-papers">CAV</a></td>
-    <td>February 3, AoE</td>
-    <td>Paris, July 17-22, 2023</td>
+    <td>February, AoE</td>
+    <td>Lisbon, Portugal, July, 2026</td>
   </tr>
   <tr>
-    <td><a href="https://icalp2023.cs.upb.de/cms/">ICALP</a></td>
+    <td><a href="https://icalp2023.cs.upb.de/cms/">KR</a></td>
     <td>February 11, 11AM CET</td>
-    <td>Paderborn, July 10-14, 2023</td>
+    <td>Lisbon, Portugal, July 10-14, 2023</td>
   </tr>
   <tr>
     <td><a href="https://computationalcomplexity.org/">CCC</a></td>
-    <td>February 10, AoE</td>
-    <td>Warwick, UK, July 17-20, 2023</td>
-  </tr>
-  
-   <tr>
-   <td><a href="">CIE </a></td>
-    <td> February 15 2023 (Abstract: February 8)</td>
-    <td>Batumi, Georgia, July 24-28, 2023</td></tr>
-  <tr>
-  <td><a href="https://lc2023.unimi.it/">Logic Colloquium</a></td>
-    <td> March 1, 2023</td>
-  <td>Milano, Italy, June 5-9, 2023</td></tr>
-  
-  <tr>
-    <td><a href="https://kr.org/KR2023/">KR</a></td>
-    <td>March 14 (Abstract: March 7)</td>
-    <td>Rhodes, September 2-8, 2023</td>
+    <td>February, AoE</td>
+    <td>Lisbon, Portugal, August 3-6</td>
   </tr>
   <tr>
-    <td><a href="">SAT</a></td>
-    <td>March 17 (Abstract: March 10)</td>
-    <td>Alghero, July 4-8, 2023</td>
-  </tr>
-   <tr>
-  <td><a href="https://sites.google.com/view/tark-2023">TARK</a></td>
-    <td>March 22, 2023 (Abstract: March 15)</td>
-    <td>Oxford, UK, June 28-30, 2023</td>
-  </tr>
-   <tr>
-  <td><a href="https://highlights-conference.org/2023">HALG (Highlights, Algorithms)</a></td>
-    <td>March 29, 2023</td>
-  <td>Praha, Czech Republic, June 2-4, 2023</td></tr>
- 
-     <tr>
-  <td><a href="http://automata2023.units.it">AUTOMATA</a></td>
-    <td>April 21 2023</td>
-  <td>Trieste, Italy, August 30-September 1, 2023</td></tr>
-    <tr>
-  <td><a href="https://highlights-conference.org/2023">Highlights (Logic, Games, Automata)</a></td>
-    <td>April 25 2023 (early: February 17)</td>
-  <td>Kassel, Germany, July 24-28, 2023</td></tr>
-      <tr>
-  <td><a href="https://algo-conference.org/2023/esa/">ESA</a></td>
-    <td>April 28 2023, AoE</td>
-  <td>Amsterdam, Netherlands, September 4-6, 2023</td></tr>
-  <tr>
-     <td><a href="https://apice.unibo.it/xwiki/bin/view/Events/Eumas2023">EUMAS</a></td>
-    <td>May ? 2023</td>
-  <td>Napoli, Italy, September 14-16, 2023</td>
-  </tr>
-  
-     <tr>
-  <td><a href="https://ecai2023.eu/">ECAI</a></td>
-    <td>May 8, 2023 (Abstract: May 2)</td>
-  <td>Krakow, Poland, Sept 30 - Oct 5, 2023</td></tr>
-   <tr> 
-  <td><a href="https://theory.utdallas.edu/COCOA2023/">COCOA</a></td>
-    <td>August 19 (Abstract: August 12)</td>
-    <td><b>Virtual</b>, December 11-13, 2023</td></tr>
-</table> 
-
-   <h2> 2024 </h2>
-  
-   <table>
-  <tr>
-    <th>Conference</th>
-    <th>Deadline</th>
-    <th>Location and Date</th>
-  </tr>
-  <tr>
-    <td><a href="">ICML</td>
-    <td></td>
-    <td>Vienna, Austria</td>
+    <td><a href="https://computationalcomplexity.org/">EC</a></td>
+    <td>February, AoE</td>
+    <td>Rome, Italy, July</td>
   </tr>
  
 </table> 
