--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
     <p>
 
     </p><ul>
+      <li> I am giving a talk this August at the
+	<a href="https://www.lix.polytechnique.fr/CCC2024/i.php?Main.Home">Random Structures and Algorithms (RS&A 2025) </a> Conference in Vienna, Austria. 
+       </li>
+        <li> My paper <a href=""> Mechanism Design With Predictions for Obnoxious Facility Location</a> has been accepted at the <a href="">EUMAS 2025</a> Conference that will take place in Bucharest, this September.  
+	</li>
       <li> I have given a talk at the <a href="https://www.lix.polytechnique.fr/CCC2024/i.php?Main.Home">Continuity, Computability Constructivity: From Logic to Algorithms (CCC'2024)</a> conference in Nice, France. 
 	</li>
       <li> I have published a paper (and given a talk) at the <a href="https://from2024.uvt.ro/">Working Formal Methods Symposium (FROM'2024)</a>  in Timișoara, Romania. The <a href="https://cgi.cse.unsw.edu.au/~eptcs/paper.cgi?FROM2024:69"> paper </a> is available online on EPTCS. 
