--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 
     </p><ul>
       <li> I am giving a talk this August at the
-	<a href="https://www.lix.polytechnique.fr/CCC2024/i.php?Main.Home">Random Structures and Algorithms (RS&A 2025) </a> Conference in Vienna, Austria. 
+	<a href="https://www.dmg.tuwien.ac.at/rsa2025/index.html">22nd International Conference on Random Structures and Algorithms (RS&A 2025) </a> Conference in Vienna, Austria. 
        </li>
-        <li> My paper <a href=""> Mechanism Design With Predictions for Obnoxious Facility Location</a> has been accepted at the <a href="">EUMAS 2025</a> Conference that will take place in Bucharest, this September.  
+        <li> My paper <a href=""> Mechanism Design With Predictions for Obnoxious Facility Location</a> has been accepted at the <a href="https://euramas.github.io/eumas2025/">22nd European Conference on Multiagent Systems (EUMAS2025')</a>, that will take place in Bucharest, this September.  
 	</li>
       <li> I have given a talk at the <a href="https://www.lix.polytechnique.fr/CCC2024/i.php?Main.Home">Continuity, Computability Constructivity: From Logic to Algorithms (CCC'2024)</a> conference in Nice, France. 
 	</li>
