--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	<a href="https://www.unibuc.ro/">University of Bucharest</a> as a Full Professor.<P>  -->
 
     <font color="#008000">
-      Effective October 1, 2022 I have left West University of Timișoara,  and am now a Full Professor at the University of Bucharest.</font><P>
+      I am a Full Professor at the University of Bucharest.</font><P>
     
     
     My research interests are varied and eclectic, and span Theoretical Computer Science, Artificial Intelligence and Complex Systems.
