--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 	<a href="https://fmi.unibuc.ro">Faculty of Mathematics and Computer Science,</a>
 	<a href="https://www.unibuc.ro/">University of Bucharest</a> as a Full Professor.<P>  -->
 
-    <font color="#008000">
-      I am a Full Professor at the University of Bucharest.</font><P>
+   
+      I am a Full Professor at the University of Bucharest.<P>
     
     
     My research interests are varied and eclectic, and span Theoretical Computer Science, Artificial Intelligence and Complex Systems.
