--- a/tcs-calendar.html
+++ b/tcs-calendar.html
@@ -41,13 +41,15 @@
   </tr>
   <tr>
     <td><a href="https://aamas2023.soton.ac.uk/">AAAI</td>
-    <td> (Abstract: August)</td>
+    <td> Deadline: August 2</td>
     <td>Singapore, January 20-27 </td>
   </tr>
   <tr>
-    <td><a href="https://aamas2023.soton.ac.uk/">AAMAS</td>
-    <td>October 28 (Abstract: October 21)</td>
-    <td>Cyprus, May </td>
+    <td><a href="https://cyprusconferences.org/aamas2026/">AAMAS</td>
+    <td>Main Track: October 8 (Abstract: October 1)</td>
+    <td>AAAI Track: November 17</td>
+    <td> BlueSky Track: December 8 (Abstract: December 3)</td>
+    <td>Cyprus, May 25-29</td>
   </tr>
   
   
