--- a/tcs-calendar.html
+++ b/tcs-calendar.html
@@ -46,9 +46,9 @@
   </tr>
   <tr>
     <td><a href="https://cyprusconferences.org/aamas2026/">AAMAS</td>
-    <td>Main Track: October 8 (Abstract: October 1)</td>
-    <td>AAAI Track: November 17</td>
-    <td> BlueSky Track: December 8 (Abstract: December 3)</td>
+    <td>Main Track: October 8 (Abstract: October 1)<p>
+        AAAI Track: November 17<p>
+        BlueSky Track: December 8 (Abstract: December 3)<p>
     <td>Cyprus, May 25-29</td>
   </tr>
   
