--- a/tcs-calendar.html
+++ b/tcs-calendar.html
@@ -56,30 +56,31 @@
   
   <tr><td><a href="https://2026.ijcai.org/">IJCAI-ECAI</a></td>
     <td>Jan  (Abstract: Jan )</td>
-    <td>Bremen, Germany, August, 2026</td></tr>
+    <td>Bremen, Germany, August 8-14, 2026</td></tr>
   
  <tr><td><a href="https://ec23.sigecom.org/call-for-contributions-acm/papers/">LICS</a></td>
     <td>Jan (Abstract: Jan )</td>
-    <td>Lisbon, Portugal, July</td></tr>
+    <td>Lisbon, Portugal, July 18-23, 2026</td></tr>
 
   <tr>
   <td><a href="https://www.issac-conference.org/2023/">SAT</a></td>
     <td>Jan (Abstract: Jan ) AOE</td>
-  <td>Lisbon, Portugal, July, 2026</td></tr>
-  <tr>
-    <td><a href="http://www.i-cav.org/2023/call-for-papers">CAV</a></td>
-    <td>February, AoE</td>
-    <td>Lisbon, Portugal, July, 2026</td>
-  </tr>
+  <td>Lisbon, Portugal, July 18-23, 2026</td></tr>
+  
   <tr>
     <td><a href="https://icalp2023.cs.upb.de/cms/">KR</a></td>
     <td>February 11, 11AM CET</td>
-    <td>Lisbon, Portugal, July 10-14, 2023</td>
+    <td>Lisbon, Portugal, July 18-23, 2026</td>
   </tr>
   <tr>
     <td><a href="https://computationalcomplexity.org/">CCC</a></td>
     <td>February, AoE</td>
     <td>Lisbon, Portugal, August 3-6</td>
+  </tr>
+  <tr>
+    <td><a href="http://www.i-cav.org/2023/call-for-papers">CAV</a></td>
+    <td>February, AoE</td>
+    <td>Lisbon, Portugal, July 26-29, 2026</td>
   </tr>
   <tr>
     <td><a href="https://computationalcomplexity.org/">EC</a></td>
