--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 	<a href="https://lap.math.hr/LAP2025/">14th Conference on Logic and Applications (LAP 2025) </a> in Dubrovnik, Croatia. 
        </li>
       <li> I am giving a talk this August at the
-	<a href="https://www.dmg.tuwien.ac.at/rsa2025/index.html">22nd International Conference on Random Structures and Algorithms (RS&A 2025) </a> in Vienna, Austria. 
+	<a href="https://www.dmg.tuwien.ac.at/rsa2025">22nd International Conference on Random Structures and Algorithms (RS&A 2025) </a> in Vienna, Austria. 
        </li>
         <li> Our paper <a href="https://arxiv.org/abs/2212.09521"> Mechanism Design With Predictions for Obnoxious Facility Location</a> has been accepted at the <a href="https://euramas.github.io/eumas2025/">22nd European Conference on Multiagent Systems (EUMAS2025')</a>, that will take place in Bucharest, this September.  
 	</li>
