--- a/tcs-calendar.html
+++ b/tcs-calendar.html
@@ -85,7 +85,7 @@
   <tr>
     <td><a href="https://computationalcomplexity.org/">EC</a></td>
     <td>February, AoE</td>
-    <td>Rome, Italy, July</td>
+    <td>Rome, Italy, July 6-10</td>
   </tr>
  
 </table> 
