--- a/index.html
+++ b/index.html
@@ -97,8 +97,9 @@
 	<br>
 		<strong>Address:</strong>
 		Faculty of Mathematics and Computer Science, <br>
-		University of Bucharest, Str. Academiei 14, <br>
-		Bucharest, RO-010014, Romania.
+		University of Bucharest, <br>
+		Politehnica Business Tower, Bd. Iuliu Maniu 15G <s>Str. Academiei 14</s>, <br>
+		Bucharest, RO-<s>010014</s>061075, Romania.
 	<!-- 	University of Bucharest,
 		Str. Academiei 14,
 		221 00 Bucharest, Romania.-->
