--- a/tcs-calendar.html
+++ b/tcs-calendar.html
@@ -83,9 +83,29 @@
     <td>Lisbon, Portugal, July 26-29, 2026</td>
   </tr>
   <tr>
-    <td><a href="https://computationalcomplexity.org/">EC</a></td>
+    <td><a href="http://ec26.sigecom.org/">EC</a></td>
     <td>February, AoE</td>
     <td>Rome, Italy, July 6-10</td>
+  </tr>
+   <tr>
+    <td><a href="https://computationalcomplexity.org/">UCNC</a></td>
+    <td></td>
+    <td>Trieste, Italy</td>
+   </tr>
+    <tr>
+    <td><a href="https://computationalcomplexity.org/">EUMAS</a></td>
+    <td></td>
+    <td>Palermo (?), Italy</td>
+    </tr>
+    <tr>
+    <td><a href="https://eenps.weebly.com/eenps-2026.html">NESY</a></td>
+    <td></td>
+    <td>Lisbon, September 1-4, 2026.</td>
+  </tr>
+    <tr>
+    <td><a href="https://eenps.weebly.com/eenps-2026.html">EENPS</a></td>
+    <td></td>
+    <td>Bucharest,Romania, September 18-19, 2026.</td>
   </tr>
  
 </table> 
