--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <a href="https://gabriel-istrate.github.io/about.html" class="navb">About</a>
 
-   <a href="https://gabriel-istrate.github.io/publications.html" class="navb">Publications</a>
+   <a href="https://gabriel-istrate.github.io/papers.html" class="navb">Publications</a>
 
   <a href="https://gabriel-istrate.github.io/media.html" class="navb">Media</a>
 
@@ -74,11 +74,12 @@
       <li> I am giving a talk this September at the
 	<a href="https://lap.math.hr/LAP2025/">14th Conference on Logic and Applications (LAP 2025) </a> in Dubrovnik, Croatia. 
        </li>
-      <li> I am giving a talk this August at the
+      
+        <li> Our paper <a href="https://arxiv.org/abs/2212.09521"> Mechanism Design With Predictions for Obnoxious Facility Location</a> has been presented at the <a href="https://euramas.github.io/eumas2025/">22nd European Conference on Multiagent Systems (EUMAS 2025)</a>, that took place recently in Bucharest.  
+	</li>
+	<li> In August 2025 I gave a talk at the
 	<a href="https://www.dmg.tuwien.ac.at/rsa2025">22nd International Conference on Random Structures and Algorithms (RS&A 2025) </a> in Vienna, Austria. 
        </li>
-        <li> Our paper <a href="https://arxiv.org/abs/2212.09521"> Mechanism Design With Predictions for Obnoxious Facility Location</a> has been accepted at the <a href="https://euramas.github.io/eumas2025/">22nd European Conference on Multiagent Systems (EUMAS2025')</a>, that will take place in Bucharest, this September.  
-	</li>
       <li> I have given a talk at the <a href="https://www.lix.polytechnique.fr/CCC2024/i.php?Main.Home">Continuity, Computability Constructivity: From Logic to Algorithms (CCC'2024)</a> conference in Nice, France. 
 	</li>
       <li> I have published a paper (and given a talk) at the <a href="https://from2024.uvt.ro/">Working Formal Methods Symposium (FROM'2024)</a>  in Timișoara, Romania. The <a href="https://cgi.cse.unsw.edu.au/~eptcs/paper.cgi?FROM2024:69"> paper </a> is available online on EPTCS. 
@@ -96,10 +97,10 @@
 
 	<br>
 		<strong>Address:</strong>
-		Faculty of Mathematics and Computer Science, <br>
+		Faculty of Mathematics and Computer Science,
 		University of Bucharest, <br>
 		Politehnica Business Tower, Bd. Iuliu Maniu 15G <s>Str. Academiei 14</s>, <br>
-		Bucharest, RO-<s>010014</s>061075, Romania.
+		Bucharest, RO-061075 <s>RO-010014</s>, Romania.
 	<!-- 	University of Bucharest,
 		Str. Academiei 14,
 		221 00 Bucharest, Romania.-->
@@ -156,7 +157,7 @@
 </main>
 
 <footer>
-Last updated August 2, 2025.
+Last updated September 14, 2025.
 </footer>
 
 
